# FODDER

./: CMakeLists.txt  Makefile  README.md
bash_script/: finedust.sh
daemon/: CMakeLists.txt
daemon/files/: fodder.config
daemon/src/: CMakeLists.txt  lib_serial.c  lib_serial.h  main.c
src/: CMakeLists.txt  lib_serial.c  lib_serial.h  main.c
src/files/: fodder.config  fodder.init
